# wise_wallet

./: .gitignore  CMakeLists.txt  README.md
client/: client.pro  main.cpp  main.qml  main_backend.cpp  main_backend.h  mainwindow.h  mainwindow.ui  resources.qrc  tcp_client.cpp  tcp_client.h
protocol/: protocol.json
server/: CMakeLists.txt
server/scripts/: build.sh  start.sh
server/src/: db_controller.cpp  db_controller.h  main.cpp  session.cpp  session.h  src.cmake  tcp_server.cpp  tcp_server.h
